<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:id="@+id/activity_homepage"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8sp">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="email"
            android:layout_margin="12sp"
            android:textAlignment="center"
            android:id="@+id/edittext_login_email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8sp">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textWebPassword"
            android:ems="10"
            android:hint="password"
            android:textAlignment="center"
            android:layout_margin="12sp"
            android:id="@+id/edittext_password"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_margin="16sp"
            android:background="#ff7e51c2"
            android:textColor="#ffffffff"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4sp"
            android:layout_weight="0"
            android:text="OR"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/button_login_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16sp"
            android:background="#ff7e51c2"
            android:text="Login via FingerPrint"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/button_login_voicedna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16sp"
            android:background="#ff7e51c2"
            android:text="Login via Voice"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/button_login_magiclink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16sp"
            android:background="#ff7e51c2"
            android:text="Login via MagicLink"
            android:textColor="#ffffffff" />



    </LinearLayout>



</LinearLayout>