<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:text="Hello. You logged in to your account successfully!"
        android:layout_width="match_parent"
        android:textSize="28sp"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Button
        android:text="Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff7e51c2"
        android:textColor="#ffffffff"
        android:layout_margin="16sp"
        android:id="@+id/btn_logout" />
</LinearLayout>