...
        android:text="LOGIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:background="#ff7e51c2"
        android:textColor="#ffffffff"
        android:id="@+id/button_homepage_login" />
</LinearLayout>
